IndexBuilder should always re-lock the database when exceptions are thrown

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 4.1.8
    • Affects Version/s: None
    • Component/s: None
    • None
    • Fully Compatible
    • ALL
    • Storage NYC 2019-01-28
    • 31
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      The IndexBuilder catches exceptions, but if the database isn't locked in MODE_X, instead of exiting and reporting the error, this invariant fails in the IndexBuildBlock.

      The IndexBuilder should use a ScopeGuard to relock the database on exit so that the destructor of the MultiIndexBlock is never called without the appropriate lock.

            Assignee:
            Louis Williams
            Reporter:
            Louis Williams
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: