SERVER-39077 IndexBuilder should always relock database on exceptions