src/mongo/db/index_builder.h
@@ -34,6 +34,7 @@
 
 #include "mongo/base/status.h"
 #include "mongo/db/catalog/index_catalog.h"
+#include "mongo/db/catalog/multi_index_block.h"
 #include "mongo/db/concurrency/d_concurrency.h"
 #include "mongo/db/jsobj.h"
 #include "mongo/platform/atomic_word.h"
@@ -107,9 +108,15 @@ public:
     static bool canBuildInBackground();
 
 private:
+    Status _buildAndHandleErrors(OperationContext* opCtx,
+                                 Database* db,
+                                 bool buildInBackground,
+                                 Lock::DBLock* dbLock) const;
+
     Status _build(OperationContext* opCtx,
-                  Database* db,
                   bool buildInBackground,
+                  Collection* coll,
+                  MultiIndexBlock& indexer,
                   Lock::DBLock* dbLock) const;
     const BSONObj _index;
     const IndexConstraints _indexConstraints;
